@@ -1,5 +1,6 @@
 #VERSION 0.9.4#
 
+ - added method _filter_date() to class Peak_Filters_Advanced
  - added method _filter_url() to class Peak_Filters_Advanced
 
 #VERSION 0.9.3#
